--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   </div>
                 </div>
                 <div class="integration">
-                  <img src="images/bootstrap.svg" style="width: 160px; opacity: .6;">
+                  <img src="images/Bootstrap.svg" style="width: 160px; opacity: .6;">
                   <img src="images/html5.svg" style="width: 120px;">
                   <img src="images/css-3.svg" style="width: 115px;">
                   <img src="images/saas.svg" style="width: 160px;">
