--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center copyright">©2020 - Tout droit réservé | Site réalisé par <a href="iarygraphic.com">IaryGraphic</a></div>
+      <div class="text-center copyright">©2021 - Tout droit réservé | Site réalisé par <a href="#">IaryGraphic</a></div>
     </div>
     <!-- End Temoignage Contact -->
   </main>
