--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-7 d-none d-lg-block">
-            <figure class="m-0"><img src="images/masque-image.png"></figure>
+            <figure class="m-0 box-profil"><img src="images/Profil-photo.jpg" alt="Profil Iary G"></figure>
           </div>
           <div class="col-lg-5">
             <div class="about-me-txt">
-              <h1>Qui suis-je? <span>Graphiste & web designer</span></h1>
+              <h1>Qui suis-je? <span>Graphiste & UI/UX Designer</span></h1>
               <p>Passionnée de l'art et du graphisme depuis toute petite,<br> <strong>j'ai fait de ma passion mon métier.</strong> <br>Après avoir travaillé dans de nombreuses sociétés et des agences web, j'ai décidé de voler de mes propres ailes.</p>
-              <p><strong>6 ans</strong> d'experience dans le domaine du graphisme / intégrateur web et &nbsp;<strong>3 ans</strong> dans le développement front-end</p>
-              <p>J'aime travailler en équipe, apprendre chaque jour des nouvelles choses, rélever les défis, minutieuse et prefectionniste.</p>
+              <p><strong>7 ans</strong> d'experience dans le domaine web design / intégrateur web et &nbsp;<strong>2 ans</strong> dans le développement front-end</p>
+              <p>J'aime travailler en équipe, apprendre chaque jour de nouvelle chose, relever les défis, minutieuse et prefectionniste.</p>
             </div>
             <div class="my-skill">
               <strong>Branding & Identité visuel</strong>
               <div class="progressBar bar_95"></div>
-              <strong>Web design</strong>
+              <strong>Web design / UI UX Design</strong>
               <div class="progressBar bar_100"></div>
               <strong>Développement site web</strong>
               <div class="progressBar bar_65"></div>
@@ -122,34 +122,46 @@
           </div>
           <div class="rea-item">
             <div class="box-rea">
-              <span>Identité visuel</span>
-              <img src="images/polygone_mokup.jpg" alt="Mockup">
+              <span>Maquette Application mobile</span>
+              <img src="images/appli-cgofficiel.jpg" alt="Appli carte grise officiel">
+            </div>
+          </div>
+          <div class="rea-item">
+            <div class="box-rea">
+              <span>Maquette / intégration web</span>
+              <img src="images/Asoavanille.jpg" alt="Asoavanille">
+              <a href="https://iary-graphic.github.io/inte-asoavanilla/" target="_blanck" class="btn btn-custom">Voir la démo</a>
             </div>
           </div>
           <div class="rea-item">
             <div class="box-rea">
               <span>Charte graphique</span>
               <img src="images/polygone-site.jpg" alt="Polygone Agency">
-              <a href="https://polygone-agency.com/" target="_blanck" class="btn btn-custom">Voir le site</a>
             </div>
           </div>
           <div class="rea-item">
             <div class="box-rea">
-              <span>Identité visuel</span>
-              <img src="images/igraphic_mockup.jpg" alt="Mockup">
+              <span>Maquette</span>
+              <img src="images/transporteur.jpg" alt="Maquette transporteur">
+            </div>
+          </div>
+          <div class="rea-item">
+            <div class="box-rea">
+              <span>Maquette & logo</span>
+              <img src="images/appli-commerce.jpg" alt="Maquette appli-commerce">
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- End Realisations -->
-    <!-- Temoignage Contact -->
+    <!-- Temoignage Contact-->
     <div id="section4" class="section temoin-contact">
       <div class="temoignage">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-md-7">
-              <div class="temoin_block">
+              <!--div class="temoin_block">
                 <div class="temoin-tem text-center">
                   <span class="avatar"><img src="images/avatar-1.png" alt="Jhon le Duc"></span>
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, </p>
@@ -160,7 +172,7 @@
                   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, </p>
                   <strong>Luca Berlin</strong>
                 </div>
-              </div>
+              </div-->
             </div>
           </div>
         </div>
@@ -181,7 +193,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center copyright">©2021 - Tout droit réservé | Site réalisé par <a href="#">IaryGraphic</a></div>
+      <div class="text-center copyright">©2021 - 2022 Tout droit réservé | Site réalisé par <a href="https://iary-graphic.github.io/">IaryGraphic</a></div>
     </div>
     <!-- End Temoignage Contact -->
   </main>
