--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                   <img src="images/symfony.svg">
                   <img src="images/wordpress.svg">
                   <img src="images/git.svg">
+                  <img src="images/icon_figma.svg">
+                  <img src="images/icon_canva.svg">
                 </div>
               </div>
             </div>
@@ -115,13 +117,6 @@
         <div class="carousel-box">
           <div class="rea-item">
             <div class="box-rea">
-              <span>Design & Intégration</span>
-              <img src="images/carte-grise-officiel.jpg" alt="carte grise officiel">
-              <a href="https://www.carte-grise-officiel.fr/" target="_blanck" class="btn btn-custom">Voir le site</a>
-            </div>
-          </div>
-          <div class="rea-item">
-            <div class="box-rea">
               <span>Maquette Application mobile</span>
               <img src="images/appli-cgofficiel.jpg" alt="Appli carte grise officiel">
             </div>
@@ -130,13 +125,34 @@
             <div class="box-rea">
               <span>Maquette / intégration web</span>
               <img src="images/Asoavanille.jpg" alt="Asoavanille">
-              <a href="https://iary-graphic.github.io/inte-asoavanilla/" target="_blanck" class="btn btn-custom">Voir la démo</a>
+              <a href="https://iary-graphic.github.io/inte-asoavanilla/" target="_blank" class="btn btn-custom">Voir la démo</a>
             </div>
           </div>
           <div class="rea-item">
             <div class="box-rea">
               <span>Charte graphique</span>
               <img src="images/polygone-site.jpg" alt="Polygone Agency">
+            </div>
+          </div>
+          <div class="rea-item">
+            <div class="box-rea">
+              <span>Charte graphique</span>
+              <img src="images/petit_pied_logo.webp" alt="Petit pied">
+              <strong>Projet en cours ...</strong>
+            </div>
+          </div>
+          <div class="rea-item">
+            <div class="box-rea">
+              <span>Conception flyer</span>
+              <img src="images/flyer_elagage.webp" alt="Flyer">
+              <a href="images/pdf/flyer_elagage.pdf" target="_blank" class="btn btn-custom">Découvrir</a>
+            </div>
+          </div>
+          <div class="rea-item">
+            <div class="box-rea">
+              <span>Conception flyer</span>
+              <img src="images/flyer_trekking.webp" alt="Flyer">
+              <a href="images/pdf/flyer_trekking.pdf" target="_blank" class="btn btn-custom">Découvrir</a>
             </div>
           </div>
           <div class="rea-item">
@@ -193,7 +209,7 @@
           </div>
         </div>
       </div>
-      <div class="text-center copyright">©2021 - 2022 Tout droit réservé | Site réalisé par <a href="https://iary-graphic.github.io/">IaryGraphic</a></div>
+      <div class="text-center copyright">©2021 - 2024 Tout droit réservé | Site réalisé par <a href="https://iary-graphic.github.io/">IaryGraphic</a></div>
     </div>
     <!-- End Temoignage Contact -->
   </main>
