--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <div class="col-lg-5">
             <div class="about-me-txt">
               <h1>Qui suis-je? <span>Graphiste & UI/UX Designer</span></h1>
-              <p>Passionnée de l'art et du graphisme depuis toute petite,<br> <strong>j'ai fait de ma passion mon métier.</strong> <br>Après avoir travaillé dans de nombreuses sociétés et des agences web, j'ai décidé de voler de mes propres ailes.</p>
-              <p><strong>7 ans</strong> d'experience dans le domaine web design / intégrateur web et &nbsp;<strong>2 ans</strong> dans le développement front-end</p>
-              <p>J'aime travailler en équipe, apprendre chaque jour de nouvelle chose, relever les défis, minutieuse et prefectionniste.</p>
+              <p>Avec plus de 9 ans d’expérience en intégration web, j’ai acquis un large éventail de compétences, notamment sur les bases indispensables à la structure et au style des pages web : HTML5, CSS3, JavaScript, ainsi que certains frameworks. J’ai également eu l’occasion de participer à divers projets, que ce soit en freelance ou au sein d’équipes plus larges. Cela m’a permis de développer une bonne vision d’ensemble des processus de développement et de collaboration avec les designers, développeurs backend, chefs de projet, et bien d’autres. Je me demande encore parfois si je devrais me spécialiser dans un domaine précis ou
+continuer à rester polyvalent dans mon travail</p>
+              
             </div>
             <div class="my-skill">
               <strong>Branding & Identité visuel</strong>
