--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           </div>
           <div class="col-lg-5">
             <div class="about-me-txt">
-              <h1>Qui suis-je? <span>Graphiste & UI/UX Designer</span></h1>
-              <p>Avec plus de 9 ans d’expérience en intégration web, j’ai acquis un large éventail de compétences, notamment sur les bases indispensables à la structure et au style des pages web : HTML5, CSS3, JavaScript, ainsi que certains frameworks. J’ai également eu l’occasion de participer à divers projets, que ce soit en freelance ou au sein d’équipes plus larges. Cela m’a permis de développer une bonne vision d’ensemble des processus de développement et de collaboration avec les designers, développeurs backend, chefs de projet, et bien d’autres. Je me demande encore parfois si je devrais me spécialiser dans un domaine précis ou
+              <h1>Qui suis-je? <span>Graphiste & UI/UX Designer / Intégrateur web </span></h1>
+              <p>Avec plus de 9 ans d’expérience en intégration web et création de design, j’ai acquis un large éventail de compétences, notamment sur les bases indispensables à la structure et au style des pages web ainsi que certains frameworks. J’ai également eu l’occasion de participer à divers projets, que ce soit en freelance ou au sein d’équipes plus larges. Cela m’a permis de développer une bonne vision d’ensemble des processus de développement et de collaboration avec les designers, développeurs backend, chefs de projet, et bien d’autres. Je me demande encore parfois si je devrais me spécialiser dans un domaine précis ou
 continuer à rester polyvalent dans mon travail</p>
               
             </div>
